--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_blue"
     tools:context=".SecondFragment">
 
     <Button
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/dark_blue"
         android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -22,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/dark_blue"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -35,9 +38,10 @@
         android:layout_marginBottom="27dp"
         android:autofillHints="No"
         android:ems="10"
+        android:hint="@string/subtitle"
+        android:textColorHint="@color/hint_color"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/subtitle"
         app:layout_constraintBottom_toTopOf="@+id/type_notes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title"
@@ -52,9 +56,10 @@
         android:layout_marginEnd="40dp"
         android:autofillHints="no"
         android:ems="10"
+        android:hint="@string/title"
+        android:textColorHint="@color/hint_color"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -69,14 +74,14 @@
         android:layout_marginBottom="130dp"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/type_notes"
+        android:textColorHint="@color/hint_color"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
-        android:text="@string/type_notes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
