--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hint_color">#455A64</color>
+    <color name="light_blue">#cce5ff</color>
+    <color name="dark_blue">#0053b3</color>
+    <color name="darker_blue">#003066</color>
 </resources>
