Successfully created a database to store data
The name of the database is called NoteME.db. In the database I have created a table called MY_NOTES and it has four columns to store the title, subtitle, note context and id .

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -57,13 +57,13 @@
         android:autofillHints="no"
         android:ems="10"
         android:hint="@string/title"
-        android:textColorHint="@color/hint_color"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
 
     <EditText
         android:id="@+id/type_notes"
