--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -33,33 +33,33 @@
         android:id="@+id/Subtitle"
         android:layout_width="231dp"
         android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginBottom="83dp"
         android:autofillHints="No"
         android:ems="10"
         android:hint="@string/subtitle"
-        android:textColorHint="@color/hint_color"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/type_notes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textColorHint="@color/hint_color"
+        app:layout_constraintBottom_toBottomOf="@+id/pick_color"
+        app:layout_constraintStart_toStartOf="@+id/Title"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Title"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="20dp"
         android:autofillHints="no"
         android:ems="10"
         android:hint="@string/title"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textColorHint="@color/hint_color"
+        app:layout_constraintBottom_toTopOf="@+id/Subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -70,19 +70,35 @@
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="135dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="137dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/type_notes"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
         android:textColorHint="@color/hint_color"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/button_back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Subtitle"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/pick_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:ems="10"
+        android:hint="@string/pick_your_colour"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
