--- a/app/src/main/res/layout/my_notes.xml
+++ b/app/src/main/res/layout/my_notes.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/backgroundCard"
     android:layout_width="match_parent"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_height="wrap_content"
     android:elevation="4dp"
     app:cardCornerRadius="5dp"
