--- a/app/src/main/res/layout/activity_create_new_note.xml
+++ b/app/src/main/res/layout/activity_create_new_note.xml
@@ -62,10 +62,9 @@
 
     <EditText
         android:id="@+id/type_notes"
-        android:layout_width="0dp"
-        android:layout_height="400dp"
-        android:layout_marginTop="135dp"
-        android:layout_marginBottom="125dp"
+        android:layout_width="294dp"
+        android:layout_height="281dp"
+        android:layout_marginBottom="100dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/type_notes"
@@ -74,19 +73,64 @@
         android:textColorHint="@color/hint_color"
         app:layout_constraintBottom_toBottomOf="@+id/button_back"
         app:layout_constraintEnd_toEndOf="@+id/Title"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/dropDown"
-        app:layout_constraintTop_toBottomOf="@+id/Subtitle"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Spinner
         android:id="@+id/dropDown"
         android:layout_width="231dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/type_notes"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/Subtitle"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Subtitle"
         app:layout_constraintTop_toBottomOf="@+id/Subtitle"
-        app:layout_constraintVertical_bias="0.428"
         tools:ignore="SpeakableTextPresentCheck" />
+
+    <LinearLayout
+        android:id="@+id/layoutAddImage"
+        android:layout_width="299dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/type_notes"
+        app:layout_constraintEnd_toEndOf="@+id/type_notes"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/type_notes"
+        app:layout_constraintTop_toBottomOf="@+id/dropDown"
+        app:layout_constraintVertical_bias="1.0">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@android:drawable/ic_menu_gallery"
+            tools:ignore="ImageContrastCheck" />
+
+        <TextView
+            android:id="@+id/image_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30sp"
+            android:text="@string/add_image"
+            android:textColor="#455A64"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="260dp"
+        android:layout_height="164dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/type_notes"
+        app:layout_constraintEnd_toEndOf="@+id/type_notes"
+        app:layout_constraintHorizontal_bias="0.205"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@+id/type_notes"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
