--- a/app/src/main/res/layout/activity_create_new_note.xml
+++ b/app/src/main/res/layout/activity_create_new_note.xml
@@ -63,7 +63,7 @@
     <EditText
         android:id="@+id/type_notes"
         android:layout_width="294dp"
-        android:layout_height="281dp"
+        android:layout_height="377dp"
         android:layout_marginBottom="100dp"
         android:ems="10"
         android:gravity="start|top"
@@ -88,49 +88,47 @@
         app:layout_constraintTop_toBottomOf="@+id/Subtitle"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <LinearLayout
-        android:id="@+id/layoutAddImage"
-        android:layout_width="299dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/type_notes"
-        app:layout_constraintEnd_toEndOf="@+id/type_notes"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/type_notes"
-        app:layout_constraintTop_toBottomOf="@+id/dropDown"
-        app:layout_constraintVertical_bias="1.0">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@android:drawable/ic_menu_gallery"
-            tools:ignore="ImageContrastCheck" />
-
-        <TextView
-            android:id="@+id/image_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30sp"
-            android:text="@string/add_image"
-            android:textColor="#455A64"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
     <ImageView
-        android:id="@+id/image2"
+        android:id="@+id/image_destination"
         android:layout_width="260dp"
         android:layout_height="164dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/stored_image"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/type_notes"
         app:layout_constraintEnd_toEndOf="@+id/type_notes"
         app:layout_constraintHorizontal_bias="0.205"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/type_notes"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+    <ImageView
+        android:id="@+id/image_selection"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/add_image"
+        android:focusable="true"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/Subtitle"
+        app:layout_constraintStart_toEndOf="@+id/Subtitle"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageView
+        android:id="@+id/camera"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/dropDown"
+        app:layout_constraintEnd_toEndOf="@+id/image_selection"
+        app:layout_constraintStart_toEndOf="@+id/dropDown"
+        app:layout_constraintTop_toBottomOf="@+id/image_selection"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_baseline_camera_alt_24"
+        tools:ignore="ImageContrastCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
