--- a/app/src/main/res/layout/my_notes.xml
+++ b/app/src/main/res/layout/my_notes.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="10dp"
     android:layout_height="wrap_content"
     android:elevation="4dp"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="15dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -22,12 +22,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:layout_below="@+id/image_selected_view"
             android:gravity="center_vertical"
             android:text="@string/title_view"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
 
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/image_selected_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:adjustViewBounds="true"
+            android:elevation="5dp"
+            android:fadingEdge="horizontal" />
         <TextView
             android:id="@+id/viewSubtitle"
             android:layout_width="wrap_content"
