--- a/app/src/main/res/layout/my_notes.xml
+++ b/app/src/main/res/layout/my_notes.xml
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:adjustViewBounds="true"
+            android:visibility="gone"
             android:elevation="5dp"
             android:fadingEdge="horizontal" />
         <TextView
